--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -149,6 +149,7 @@
 "pin-actions-unblocking-pin" = "Разблокирование  %@:";
 "pin-actions-repeated-pin-doesnt-match" = "Новый %@ и повторный %@ различны.";
 "pin-actions-pin-blocked" = "%@ заблокирован.";
+"pin-actions-puk-change-warning" = "Если после смены PUK код забывается и сетрификат блокируется из-за неверно введённых PIN1 или PIN2, то единственной возможностью восстановить работоспособность ID- карты, это обратиться в бюро обслуживания.";
 
 
 // *** Settings ***
