--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -35,6 +35,9 @@
 "signature-view-begin-label" = "Choose file to sign or validate";
 "signature-view-begin-button" = "CHOOSE FILE";
 
+// Signing view
+"signing-recent-containers" = "Recent containers";
+
 // Crypto
 "crypto-view-begin-label" = "Choose file to crypt or decrypt";
 "crypto-view-begin-button" = "CHOOSE FILE";
