--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -136,6 +136,7 @@
 "container-error-message-invalid-signature" = "НЕПРАВИЛЬНАЯ ПОДПИСЬ";
 "container-signature-signed" = "Подписанный %@";
 "container-title" = "Контейнер";
+"container-missing-signatures" = "Нет подписей";
 
 // *** My eID ***
 "my-eid-id-card-info" = "ID-карта - это внутригосударственный документ, удостоверяющий личность начиная с 15-ти лет. Гражданин Эстонии с ID-картой может путешествовать по Европейскому Союзу и в странах Европейской экономической зоны.\n\nID-карту можете ходатайствовать в Департамента полиции и пограничной охраны, в зарубежных представительствах Эстонской республики, по почте или по электронной посте.. %@";
