--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -230,3 +230,6 @@
 // *** Share Extension ***
 "share-extension-import-title" = "Faili import";
 "share-extension-import-message" = "Fail on ajutisse kausta salvestatud. Impordi lõpetamiseks mine RIA DigiDoc rakendusse.";
+
+"signature-remove-confirm-message" = "Kas soovid eemaldada allkirja?";
+"datafile-remove-confirm-message" = "Kas soovite dokumendi konteinerist eemaldada?";
