Show "add files" button in container view for iOS 11; Show "add files" button in recent containers view for iOS 11; Show information about importing files when OS lower than iOS 11; Show information about invalid signature on top of container view

--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -233,3 +233,5 @@
 
 "signature-remove-confirm-message" = "Вы хотите удалить подпись?";
 "datafile-remove-confirm-message" = "Вы хотите удалить документ из контейнера?";
+
+"signing-missing-file-import-message" = "This iOS version doesn't support importing files from app.\n\nUse file from outside the app and open it with RIA DigiDoc.";
