--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -232,3 +232,5 @@
 
 "signature-remove-confirm-message" = "Do you want to remove a signature?";
 "datafile-remove-confirm-message" = "Do you want to remove document from container?";
+
+"signing-missing-file-import-message" = "This iOS version doesn't support importing files from app.\n\nUse file from outside the app and open it with RIA DigiDoc.";
