--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -233,3 +233,5 @@
 
 "signature-remove-confirm-message" = "Kas soovid eemaldada allkirja?";
 "datafile-remove-confirm-message" = "Kas soovite dokumendi konteinerist eemaldada?";
+
+"signing-missing-file-import-message" = "This iOS version doesn't support importing files from app.\n\nUse file from outside the app and open it with RIA DigiDoc.";
