Better message for user cancelled signing process; "Remember me" functionality for Mobile-ID signing

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -248,3 +248,4 @@
 "mobile-id-challenge-waiting-response" = "Waiting for response ...";
 "container-sign-title" = "Sign";
 "container-validate-title" = "Validate container";
+"mobile-id-user-cancel-message" = "Signing cancelled by user";
