--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -139,7 +139,7 @@
 "container-error-message-invalid-signature" = "VIGANE ALLKIRI";
 "container-signature-signed" = "Allkirjastatud %@";
 "container-title" = "Konteiner";
-"container-missing-signatures" = "Allkirjad puuduvad";
+"container-missing-signatures" = "Konteiner ei ole allkirjastatud";
 
 // *** My eID ***
 "my-eid-id-card-info" = "ID-kaart on riigisisene kohustuslik isikut tõendav dokument alates 15-aastast. Eesti kodanik saab ID-kaardiga reisida Euroopa Liidu ja Euroopa Majanduspiirkonna riikides.\n\nID-kaarti saab taotleda Politsei- ja Piirivalveameti teenindustes, Eesti Vabariigi välisteeninduses, posti võ e-posti teel. %@";
