--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -250,3 +250,4 @@
 "container-sign-title" = "Allkirjastamine";
 "container-validate-title" = "Konteineri kontroll";
 "mobile-id-user-cancel-message" = "Toiming katkestati kasutaja poolt";
+"container-validating" = "Laadimine...";
