--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -139,7 +139,7 @@
 "container-error-message-invalid-signature" = "НЕПРАВИЛЬНАЯ ПОДПИСЬ";
 "container-signature-signed" = "Подписанный %@";
 "container-title" = "Контейнер";
-"container-missing-signatures" = "Контейнер не подписан";
+"container-missing-signatures" = "Контейнерное управление";
 
 // *** My eID ***
 "my-eid-id-card-info" = "ID-карта - это внутригосударственный документ, удостоверяющий личность начиная с 15-ти лет. Гражданин Эстонии с ID-картой может путешествовать по Европейскому Союзу и в странах Европейской экономической зоны.\n\nID-карту можете ходатайствовать в Департамента полиции и пограничной охраны, в зарубежных представительствах Эстонской республики, по почте или по электронной посте.. %@";
@@ -250,3 +250,5 @@
 "container-sign-title" = "Регистрация";
 "container-validate-title" = "Проверить контейнер";
 "mobile-id-user-cancel-message" = "Подписание отменено пользователем";
+"container-validating" = "Загрузка...";
+
