Fixed file import progress title label localization

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -251,3 +251,4 @@
 "container-validate-title" = "Container control";
 "mobile-id-user-cancel-message" = "Signing cancelled by user";
 "container-validating" = "Loading...";
+"importing-files-progress-message" = "Importing files...";
