--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -224,7 +224,7 @@
 
 // *** Mobile ID Challenge View ***
 
-"challenge-code-label" = "Code: %@";
+"challenge-code-label" = "Control code: %@";
 
 // *** Errors ***
 "mobile-id-timeout-message" = "Mobile-ID request timeout";
@@ -252,3 +252,4 @@
 "mobile-id-user-cancel-message" = "Signing cancelled by user";
 "container-validating" = "Loading...";
 "importing-files-progress-message" = "Importing files...";
+"mobile-id-sign-help-title" = "Make sure control code matches with one in phone screen and enter Mobile-ID PIN2-code";
