Moved recent containers to separate screen activated from menu; Menu items put into table view

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 // Main menu
 "menu-help" = "HELP";
 "menu-intro" = "INTRODUCTION";
-"menu-filemanager" = "DOCUMENTS";
+"menu-recent-containers" = "RECENT CONTAINERS";
 "menu-settings" = "SETTINGS";
 "menu-about" = "ABOUT";
 
