--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 // Main menu
 "menu-help" = "ПОМОГАТЬ";
 "menu-intro" = "ВВЕДЕНИЕ";
-"menu-recent-containers" = "ПОСЛЕДНИЕ КОНТЕЙНЕРЫ";
+"menu-recent-containers" = "ПОСЛЕДНИЕ ДОКУМЕНТЫ";
 "menu-settings" = "НАСТРОЙКИ";
 "menu-about" = "ОКОЛО";
 
