--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 // Main menu
 "menu-help" = "HELP";
 "menu-intro" = "INTRODUCTION";
-"menu-recent-containers" = "RECENT CONTAINERS";
+"menu-recent-containers" = "RECENT DOCUMENTS";
 "menu-settings" = "SETTINGS";
 "menu-about" = "ABOUT";
 
